[package]
name = "bevy_mod_picking"
version = "0.3.8-alpha.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "graphics", "picking", "bevy", "3d", "raycast"]
categories = ["game-engines", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.4" }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "af6723156782b5579c90b4eac1fa49b1646dbaf5" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "master"}
#bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", rev="24b8ba464be2a936098971c9f6aa6c5738bd4250 }
bevy_mod_raycast = { git = "https://github.com/cloudwow/bevy_mod_raycast", rev="690ef95eb3b4154af73f4c782606f76b651f480b" }

cc6fbdb8acdbba133ec42d01c402171ee833f663

[[example]]
name = "3d_scene"


[[example]]
name = "events"


[[example]]
name = "multiple_windows"


[[example]]
name = "stress_test"

